--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
     <link rel="stylesheet" href="/src/index.css">
 </head>
 
-<body
-    class="font-display bg-background-light dark:bg-background-dark text-slate-900 dark:text-white h-screen overflow-hidden">
+<body class="font-display bg-background-light dark:bg-background-dark text-slate-900 dark:text-white">
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
 </body>
